# fas

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  handlers.rs  i18n.rs  main.rs  store.rs  templates.rs
