[package]
name = "fas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "=0.6.20"
tokio = { version = "=1.32.0", features = ["full"] }
serde = { version = "=1.0.188", features = ["derive"] }
serde_json = "=1.0.107"
chrono = { version = "=0.4.31", features = ["serde"] }
uuid = { version = "=1.4.1", features = ["v4", "serde"] }
tower = "=0.4.13"
tower-http = { version = "=0.4.4", features = ["trace"] }
tracing = "=0.1.37"
tracing-subscriber = { version = "=0.3.17", features = ["env-filter"] }
regex = "=1.9.5"


